--- a/pages/binding/binding.wxml
+++ b/pages/binding/binding.wxml
@@ -1,13 +1,10 @@
 <view class='binding'>
-  <view class='title' wx:if='{{isBinding}}'>绑定pc账号</view>
-  <view class='title' wx:if='{{!isBinding}}'>注册pc账号</view>
+  <view class='title'>绑定pc账号</view>
   <view class='input-wrapper'>
     <input bindinput='watchAccount' placeholder="账号" value='{{account}}'></input>
     <input bindinput='watchPassword' placeholder="密码" value='{{password}}'></input>
   </view>
-  <t-button text="绑定" type='change' size='mini' wx:if="{{isBinding}}"></t-button>
-  <t-button text="注册" type='change' size='mini' wx:if="{{!isBinding}}"></t-button>
-  <view class='tips' bindtap='goToSignUp' wx:if='{{isBinding}}'>还没有pc账号，注册吧弟弟(点击注册)</view>
-  <view class='tips' bindtap='goToBinding' wx:if='{{!isBinding}}'>绑定pc账号，立即同步数据</view>
+  <t-button text="绑定" type='change' size='mini' bindtap='submit'></t-button>
+  <view class='tips'>绑定pc账号，立即同步数据</view>
   <image src='../../images/tomato-bg.png' class='bg'></image>
 </view>
