--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,8 +1,18 @@
 <view class="home-container">
   <scroll-view class='todoList' scroll-y="true">
-    <view class='item' wx:for="{{lists}}" wx:for-index="index" wx:key="{{item.id}}" bindtap='destroyTodo' data-index='{{index}}'>
-      <view class="select {{item.finished && 'active'}}"></view>
-      <text>{{item.text}}</text>
+    <view class='item' 
+          wx:for="{{lists}}" 
+          wx:for-index="index" 
+          wx:key="{{item.id}}"     
+          wx:if="{{!item.completed}}">
+      <view class="select {{item.completed && 'active'}}" 
+          bindtap='destroyTodo'
+          data-index="{{index}}"
+          data-id="{{item.id}}"></view>
+      <text bindtap="changeText" 
+          data-index="index" 
+          data-id="{{item.id}}" 
+          data-content="{{item.description}}">{{item.description}}</text>
     </view>
   </scroll-view>
   <g-button text='创建任务'  type='change' bindtap="showConfirm"></g-button>
@@ -12,4 +22,5 @@
     </navigator>
   </view>
   <g-confirm visible="{{visible}}" placeholder="我要输入点啥" bindconfirm="confirmCreate" bindcancel="hideConfirm"></g-confirm>
+  <g-confirm visible="{{ visibleUpdateConfirm}}" value="{{updateContent}}" bindconfirm="confirmUpdate" bindcancel="hideUpdateConfirm"></g-confirm>
 </view>
