--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -5,7 +5,7 @@
     </view>
     <view class="details">
       <open-data type='userNickName' class='name'></open-data>
-      <text>绑定pc账号</text>
+      <navigator url='/pages/binding/binding' wx:if="{{!me.account}}">绑定pc账号</navigator>
     </view>
     <button open-type='contact' class='qr'>问题反馈</button>
   </view>
@@ -13,12 +13,23 @@
     <view hover-class='hover-active' class='{{tab==="tomato" && "active"}}' data-name='tomato' bindtap="changeTab">番茄历史</view>
     <view hover-class='hover-active' class='{{tab==="task" && "active"}}' data-name='task' bindtap="changeTab">我完成的任务</view>
   </view>
-  <scroll-view scroll-y="true" class='lists'>
-    <view class="item" wx:for="{{lists}}" wx:for-index="key" wx:key="index">
-      <view class='time'>{{key}}</view>
-      <view class='content' wx:for="{{lists[key]}}" wx:for-index="index" wx:key="index">
-        <text>{{item.time}}</text>
-        <view class='detail'>{{item.text}}</view>
+  <scroll-view scroll-y="true" class='lists' wx:if="{{tab==='tomato'}}">
+    <view class="item" wx:for="{{tomatoes}}" wx:for-index="key" wx:key="index">
+      <!-- <wxs src="../../libs/formattor.wxs" moudle="formattor"></wxs>
+      <view class='time'>{{formattor.monthFormat(key)}}</view> -->
+      <view class='content' wx:for="{{tomatoes[key]}}" wx:for-index="index" wx:key="index">
+        <text>{{item.create_at}}</text>
+        <view class='detail'>{{item.description}}</view>
+      </view>
+    </view>
+  </scroll-view>
+    <scroll-view scroll-y="true" class='lists' wx:if="{{tab==='task'}}">
+    <view class="item" wx:for="{{todos}}" wx:for-index="key" wx:key="index">
+      <wxs src="../../libs/formattor.wxs" module="formattor"></wxs>
+      <view class='time'>{{formattor.monthFormat(key)}}</view>
+      <view class='content' wx:for="{{todos[key]}}" wx:for-index="index" wx:key="index">
+        <text>{{formattor.dateFormat(item.created_at,"hh:mm")}}</text>
+        <view class='detail'>{{item.description}}</view>
       </view>
     </view>
   </scroll-view>
