--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -5,7 +5,7 @@
     </view>
     <view class="details">
       <open-data type='userNickName' class='name'></open-data>
-      <navigator url='/pages/binding/binding' wx:if="{{!me.account}}">绑定pc账号</navigator>
+      <!-- <navigator url='/pages/binding/binding' wx:if="{{!me.account}}">绑定pc账号</navigator> -->
     </view>
     <button open-type='contact' class='qr'>问题反馈</button>
   </view>
@@ -15,10 +15,10 @@
   </view>
   <scroll-view scroll-y="true" class='lists' wx:if="{{tab==='tomato'}}">
     <view class="item" wx:for="{{tomatoes}}" wx:for-index="key" wx:key="index">
-      <!-- <wxs src="../../libs/formattor.wxs" moudle="formattor"></wxs>
-      <view class='time'>{{formattor.monthFormat(key)}}</view> -->
-      <view class='content' wx:for="{{tomatoes[key]}}" wx:for-index="index" wx:key="index">
-        <text>{{item.create_at}}</text>
+      <wxs src="../../libs/formattor.wxs" module="formattor"></wxs>
+      <view class="time">{{formattor.monthFormat(key)}}</view>
+      <view class="content" wx:for="{{tomatoes[key]}}" wx:if="{{item.description}}"                 wx:for-index="index" wx:key="index">
+        <text class=''>{{formattor.dateFormat(item.created_at,"hh:mm")}}</text>
         <view class='detail'>{{item.description}}</view>
       </view>
     </view>
