--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   color: #fe996f;
-  font-size: 26rpx;
+  font-size: 22rpx;
   padding: 10rpx 45rpx;
   margin-bottom: 23rpx;
 }
@@ -37,9 +37,8 @@
 .tabs { 
   background: #fff;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 30rpx;
+  justify-content: space-around;
+  font-size: 28rpx;
   color: #333;
   padding: 20rpx 0;
   margin-bottom: 24rpx;
